# findapet

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  readme.md
.github/workflows/: python-app.yml
app/: alembic.ini  main.py  requirements.txt
app/api/routes/: animals.py  api.py  auth.py  users.py
app/core/: security.py
app/db/: crud.py  database.py
app/db/crud/: animals.py  users.py
app/db/migrations/: env.py
app/models/: __init__.py  animals.py  breeds.py  enums.py  users.py
app/schemas/: __init__.py  animals.py  base.py  users.py
tests/: conftest.py  test_users.py
tests/api/: test_animals.py  test_main.py  test_users.py
tests/crud/: test_animals.py  test_users.py
tests/utils/: random.py  user.py  utils.py
