[tool.poetry]
name = "find-a-pet"
version = "0.1.0"
description = "Find-A-Pet is a pet adoption REST API based on FastAPI"
authors = ["Petar Enev <enev@engineer.bg>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.26.0"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
databases = "^0.6.1"
email-validator = "^1.1.1"
psycopg2-binary = "^2.9.4"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
