[tool.poetry]
name = "find-a-pet"
version = "0.1.0"
description = "Find-A-Pet is a pet adoption REST API based on FastAPI"
authors = ["Petar Enev <enev@engineer.bg>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.1"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
email-validator = "^1.1.1"
psycopg2-binary = "^2.9.4"
SQLAlchemy = "^2.0.9"
alembic = "^1.8.1"
python-decouple = "^3.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.28.1"
python-multipart = "^0.0.5"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
